--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,28 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carousel" class="carousel slide" data-ride="carousel">
+
+    <div class="carousel-inner">
+        @*<div class="carousel-item active">
+            <img src="https://pbs.twimg.com/media/FOBP8fIWYAQRGD3?format=jpg&name=large" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://pbs.twimg.com/media/FN5pJbJXwA4aIvA?format=jpg&name=4096x4096" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://pbs.twimg.com/media/FN1x6u7X0AUh6v_?format=jpg&name=medium" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+            <img src="https://pbs.twimg.com/media/FM7zz-aXoAEWcHB?format=jpg&name=4096x4096" class="d-block w-100" alt="...">
+        </div>*@
+    </div>
+    <button class="carousel-control-prev" type="button" data-target="#carousel" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-target="#carousel" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+    </button>
 </div>
