--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,29 +1,98 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Pagina Principal";
 }
 
-<div id="carousel" class="carousel slide" data-ride="carousel">
-
+<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+        <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"></li>
+    </ol>
     <div class="carousel-inner">
-        @*<div class="carousel-item active">
-            <img src="https://pbs.twimg.com/media/FOBP8fIWYAQRGD3?format=jpg&name=large" class="d-block w-100" alt="...">
+        <div class="carousel-item active">
+            <img src="~/imgs/Imagen-car-2.png" class="d-block w-100" alt="Slide 1">
         </div>
         <div class="carousel-item">
-            <img src="https://pbs.twimg.com/media/FN5pJbJXwA4aIvA?format=jpg&name=4096x4096" class="d-block w-100" alt="...">
+            <img src="~/imgs/Imagen-car-3.png" class="d-block w-100" alt="Slide 2">
         </div>
         <div class="carousel-item">
-            <img src="https://pbs.twimg.com/media/FN1x6u7X0AUh6v_?format=jpg&name=medium" class="d-block w-100" alt="...">
+            <img src="~/imgs/Imagen-car-4.png" class="d-block w-100" alt="Slide 3">
         </div>
         <div class="carousel-item">
-            <img src="https://pbs.twimg.com/media/FM7zz-aXoAEWcHB?format=jpg&name=4096x4096" class="d-block w-100" alt="...">
-        </div>*@
+            <img src="~/imgs/Imagen-car-1.png" class="d-block w-100" alt="Slide 3">
+        </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carousel" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carousel" data-slide="next">
+        <span class="visually-hidden">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </button>
+        <span class="visually-hidden">Siguiente</span>
+    </a>
+</div>
+
+<hr />
+
+<div class="container-fluid">
+    <div class="row row-cols-4 row-cols-md-4 row-cols-sm-1 g-4">
+        <div class="col text-center">
+            <div class="card h-75">
+                <img src="~/imgs/CUI.jpg" class="card-img-top h-50" alt="imagen-proyecto">
+                <div class="card-body">
+                    <h5 class="card-title">Registro por ABB</h5>
+                    <p class="card-text">Pasa a ver los registros por arbol ABB</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary" asp-controller="Cliente" asp-action="Index" target="_blank" rel="noopener noreferrer">Visitar</a>
+                </div>
+            </div>
+
+        </div>
+        <div class="col text-center">
+            <div class="card h-75">
+                <img src="~/imgs/Impresora.jpg" class="card-img-top h-50" alt="imagen-proyecto">
+                <div class="card-body">
+                    <h5 class="card-title">Nuevo Registro ABB</h5>
+                    <p class="card-text">Pasa a ver los registros por arbol ABB</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary" asp-controller="Cliente" asp-action="Create" target="_blank" rel="noopener noreferrer">Visitar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col text-center">
+            <div class="card h-75">
+                <img src="~/imgs/PMT.jpg" class="card-img-top h-50" alt="imagen-proyecto">
+                <div class="card-body">
+                    <h5 class="card-title">Registro por AVL</h5>
+                    <p class="card-text">Pasa a ver los registros por arbol AVL</p>
+                </div>
+                <div class="card-footer ">
+                    <a class="btn btn-primary" asp-controller="AVL" asp-action="Index2" target="_blank" rel="noopener noreferrer">Visitar</a>
+                </div>
+            </div>
+        </div>
+        <div class="col text-center">
+            <div class="card h-75">
+                <img src="~/imgs/RTU.jpg" class="card-img-top h-50" alt="imagen-proyecto">
+                <div class="card-body">
+                    <h5 class="card-title">Nuevo Registro AVL</h5>
+                    <p class="card-text">Pasa a ver los registros por arbol AVL</p>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-primary" asp-controller="AVL" asp-action="Create2" target="_blank" rel="noopener noreferrer">Visitar</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container">
+    <h1 class="display-4">Gracias por contar con nuestros servicios</h1>
+    <blockquote class="blockquote">
+        <p>Es un honor que la gente Guatemalteca confie en nosotros para sobrellevar sus impuestos y llevar su vida
+            de una mejor manera.
+        </p>
+    </blockquote>
 </div>
