--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,47 +3,49 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   @* <title>@ViewData["Title"] - LAB02_ED1_G</title>*@
+    @* <title>@ViewData["Title"] - LAB02_ED1_G</title>*@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-light" style="background-color: #3D5A80;">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-lg navbar-light" style="background-color:#17527e">
             <a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">
                 <img src="https://portal.sat.gob.gt/portal/wp-content/uploads/2021/06/logo_sat_blanco-1.png" height="50">
             </a>
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link text-white-50" asp-area="" asp-controller="Cliente" asp-action="Create">Nuevo registro ABB</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white-50" asp-area="" asp-controller="Cliente" asp-action="Index">Registro por ABB</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white-50" asp-area="" asp-controller="AVL" asp-action="Create2">Nuevo registro AVL</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white-50" asp-area="" asp-controller="AVL" asp-action="Index2">Registro por AVL</a>
-                    </li>
-                </ul>
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon d-md-none"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="sidebarMenu">
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Cliente" asp-action="Create">Nuevo registro ABB</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Cliente" asp-action="Index">Registro por ABB</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="AVL" asp-action="Create2">Nuevo registro AVL</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="AVL" asp-action="Index2">Registro por AVL</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - LAB02_ED1_G
+    <footer class="border-top footer text-muted my-5" style="background-color:#17527e">
+        <div class="container my-5 text-light">
+            © Superintendencia de Administración Tributaria 2023. Todos los Derechos Reservados.
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
