--- a/Views/AVL/Index2.cshtml
+++ b/Views/AVL/Index2.cshtml
@@ -27,6 +27,15 @@
         <input name="BuscCorreo" type="search" class="form-control me-2" placeholder="Correo" />
         <button type="submit" class="btn btn-outline-success">Buscar</button>
     </form>
+    <form asp-action="OrdenarDPI" method="post">
+        <button type="submit" class="btn btn-outline-success">OrdenarDPI</button>
+    </form>
+    <form asp-action="OrdenarSerie" method="post">
+        <button type="submit" class="btn btn-outline-success">OrdenarSerie</button>
+    </form>
+    <form asp-action="OrdenarEmail" method="post">
+        <button type="submit" class="btn btn-outline-success">OrdenarEmail</button>
+    </form>
 </div>
 <table class="table">
     <thead>
