--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Pagina Principal";
+    ViewData["Title"] = "Inicio";
 }
 
 <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
