Fixing size of the banner

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
             </div>
         </nav>
     </header>
-    <div class="container-fluid">
+    <div >
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
