Fixing issues and adding the csv

--- a/Views/Cliente/Index.cshtml
+++ b/Views/Cliente/Index.cshtml
@@ -96,7 +96,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones',
+            'Tiempo de Comparaciones de DPI',
             '@TempData["TComp"]',
             'success'
         );
@@ -107,7 +107,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones 2',
+            'Tiempo de Comparaciones de Número de Serie',
             '@TempData["TComp2"]',
             'success'
         );
