--- a/Views/AVL/Index2.cshtml
+++ b/Views/AVL/Index2.cshtml
@@ -95,7 +95,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones',
+            'Tiempo de Comparaciones de DPI',
             '@TempData["TComp"]',
             'success'
         );
@@ -106,7 +106,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones 2',
+            'Tiempo de Comparaciones de Número de Serie',
             '@TempData["TComp2"]',
             'success'
         );
