fixing the "time" word from index and index2

--- a/Views/Cliente/Index.cshtml
+++ b/Views/Cliente/Index.cshtml
@@ -96,7 +96,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de busqueda de DPI',
+            'Comparaciones de busqueda de DPI',
             '@TempData["TComp"]',
             'success'
         );
@@ -107,7 +107,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de busqueda de Número de Serie',
+            'Comparaciones de busqueda de Número de Serie',
             '@TempData["TComp2"]',
             'success'
         );
@@ -118,7 +118,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de busqueda de Correo',
+            'Comparaciones de busqueda de Correo',
             '@TempData["TComp3"]',
             'success'
         );
