--- a/Views/AVL/Index2.cshtml
+++ b/Views/AVL/Index2.cshtml
@@ -95,7 +95,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de de buqueda DPI',
+            'Comparaciones de de buqueda DPI',
             '@TempData["TComp"]',
             'success'
         );
@@ -106,7 +106,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de de buqueda Número de Serie',
+            'Comparaciones de de buqueda Número de Serie',
             '@TempData["TComp2"]',
             'success'
         );
@@ -117,7 +117,7 @@
 {
     <script type="text/javascript">
         Swal.fire(
-            'Tiempo de Comparaciones de buqueda de Correo',
+            'Comparaciones de buqueda de Correo',
             '@TempData["TComp3"]',
             'success'
         );
